--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "konva": "^7.2.2",
     "vue": "^2.6.11",
+    "vue-axios": "^3.2.2",
+    "vue-konva": "^2.1.6",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
